	* Added a 'libreoffice-calc' dependency to the 'davit-gui' DEB
	package.
2025-09-03 Fred Gleason <fredg@paravelsystems.com>
	* Fixed generation errors for various reports in davit(1).
2025-09-03 Fred Gleason <fredg@paravelsystems.com>
	* Added an icons for Networks in 'icons/network.xpm'.
	* Added an icons for Providers in 'icons/provider.xpm'.
	* Added an icons for Programs in 'icons/program.xpm'.
2025-09-03 Fred Gleason <fredg@paravelsystems.com>
	* Added an icons for Reports in 'icons/report.xpm'.
2025-09-03 Fred Gleason <fredg@paravelsystems.com>
	* Added an application icon for davit(1).
2025-09-03 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 3.0.0rc1.
2025-09-04 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'postfix' dependency to the 'davit-gui' DEB package.
2025-09-05 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'DvtProfile' to use Exemplar v2.0.2.
	* Added a 'dvtwgmgr' helper app in 'utils/dvtwgmgr/'.
2025-09-05 Fred Gleason <fredg@paravelsystems.com>
	* Refactored the 'dvtwgmgr' help to use '--up' and '--down' switches.
2025-09-23 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in davit(1) that falsely reported a crash of
	dvtwgmgr(1) at shutdown.
2025-09-25 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'openresolv' dependency to the 'davit-gui' DEB package.
2025-09-25 Fred Gleason <fredg@paravelsystems.com>
	* Refactored davit(1) to use the 'setsigaction()' rather than
	the 'signal()' syscall.
	* Fixed bugs in davit(1) that would davit(1) to leave wireguard
	tunnels active if stopped by means of SIGINT or SIGTERM signals.
2025-09-25 Fred Gleason <fredg@paravelsystems.com>
	* Removed the 'openresolv' dependency to the 'davit-gui' DEB package.
2025-09-25 Fred Gleason <fredg@paravelsystems.com>
	* Documented in '[Wireguard]' section in the davit.conf(5) man page.
2025-09-25 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 3.0.0rc2.