@@ -4,6 +4,7 @@ Loginname=dvtuser
 Password=hackme
 Database=Davit
 ServerType=QMYSQL
+;ConnectionTimeout=
 
 [Fonts]
 ; Directives in the [Fonts] section allows the fonts used by Davit to
