@@ -1129,3 +1129,9 @@
 	* Documented in '[Wireguard]' section in the davit.conf(5) man page.
 2025-09-25 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the package version to 3.0.0rc2.
+2025-09-26 Fred Gleason <fredg@paravelsystems.com>
+	* Refactored code to use a single 'DvtOpenDb()' function for all
+	modules.
+	* Added universal support for '--mysql-hostname=',
+	'--mysql-loginname=', '-mysql-password=', '--mysql-database=' and
+	'--mysql-servertype=' switches in all modules.
